# autocorrect

./: .autocorrectignore  .autocorrectrc.template  .gitignore  .pre-commit-hooks.yaml  .prettierignore  404.html  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.reviewdog  IFLOW.md  Makefile  README.md  bun.lockb  conversation-2025-09-25-151826.txt  install  package.json
.github/workflows/: cd.yml  ci.yml  close-slate-issues.yml  go.yml  homebrew.yml  npm.yml  python.yml  release-crate-gem.yml  release-crate.yml  release-docker.yml  release-gem.yml  release-java.yml  release-node.yml  release-py.yml  release-rb.yml  release-ruby.yml  release-rubygem.yml  release-tauri.yml  release-wasm.yml  release-website.yml  release.yml
assets/: autocorrect-8e318c1c.js  autocorrect_bg-46190a73.wasm  cssMode-dac65fcc.js  freemarker2-a3baa76d.js  handlebars-e0e543dd.js  html-20738182.js  htmlMode-cb07120f.js  index-337a0e12.css  javascript-1699c6c4.js  jsonMode-47a2cab4.js  liquid-86efdfec.js  python-77649353.js  razor-31cbaa01.js  tsMode-4b3eb3e8.js  typescript-ffb0559a.js  xml-70ec056a.js  yaml-a8a64133.js
autocorrect/: .autocorrectrc  .autocorrectrc.default  Cargo.toml  LICENSE  README.md  build.rs
autocorrect-cli/: .autocorrectrc.template  Cargo.toml  build.rs
autocorrect-cli/src/: cli.rs  initializer.rs  lib.rs  logger.rs  main.rs  progress.rs  time.rs  update.rs
autocorrect-derive/: Cargo.toml
autocorrect-derive/src/: lib.rs
autocorrect-java/: .gitignore  Cargo.toml  Makefile  README.md
autocorrect-java/example/: Makefile  pom.xml
autocorrect-java/javasrc/: pom.xml
autocorrect-java/src/: lib.rs
autocorrect-lsp/: Cargo.toml
autocorrect-lsp/src/: lib.rs  typocheck.rs
autocorrect-node/: Cargo.toml  README.md  cli.js  cli.mjs  index.d.ts  index.js  package.json
autocorrect-node/__test__/: index.spec.mjs
autocorrect-node/npm/darwin-arm64/: README.md  package.json
autocorrect-node/npm/darwin-x64/: README.md  package.json
autocorrect-node/npm/linux-x64-gnu/: README.md  package.json
autocorrect-node/npm/linux-x64-musl/: package.json
autocorrect-node/npm/win32-x64-msvc/: README.md  package.json
autocorrect-node/src/: lib.rs
autocorrect-py/: Cargo.toml  README.md  autocorrect_py.pyi  pyproject.toml  test_autocorrect_py.py
autocorrect-py/src/: lib.rs
autocorrect-rb/: .gitignore  Gemfile  LICENSE  README.md  Rakefile  autocorrect-rb.gemspec
autocorrect-rb/ext/autocorrect/: Cargo.toml  extconf.rb
autocorrect-rb/ext/autocorrect/src/: lib.rs
autocorrect-rb/lib/: autocorrect-rb.rb
autocorrect-rb/test/: format_test.rb  lib_test.rb  test_helper.rb
autocorrect-swift/: Cargo.toml  autocorrect_swift.h
autocorrect-swift/src/: lib.rs
autocorrect-tauri/: README.md  craco.config.js  package.json  tailwind.config.js
autocorrect-tauri/src/: App.css  App.scss  App.tsx  antd.dark.scss  antd.less  config.ts  icon.tsx  index.css  index.scss  index.tsx
autocorrect-tauri/src-tauri/: Cargo.toml  tauri.conf.json
autocorrect-tauri/src-tauri/icons/: icon.icns
autocorrect-tauri/src-tauri/src/: main.rs
autocorrect-wasm/: Cargo.toml
autocorrect-wasm/src/: config.rs  ignorer.rs  lib.rs
autocorrect-website/: README.md  bun.lockb  index.html  package.json  tailwind.config.js  test-config.yml  tsconfig.json  vite.config.ts
autocorrect/benches/: example.rs
autocorrect/benches/fixtures/: example.js  example.md  large.json  markdown.md
autocorrect/grammar/: asciidoc.pest  c.pest  conf.pest  csharp.pest  css.pest  dart.pest  elixir.pest  gettext.pest  go.pest  html.pest  java.pest  javascript.pest  json.pest  jupyter.pest  kotlin.pest  latex.pest  lua.pest  markdown.pest  objective_c.pest  php.pest  python.pest  ruby.pest  rust.pest  scala.pest  sql.pest  strings.pest  swift.pest  xml.pest  yaml.pest
autocorrect/spellcheck/: noun.txt
autocorrect/src/: bench.rs  changeset.rs  code.rs  config.rs  csharp.rs  css.rs  dart.rs  diff.rs  elixir.rs  format.rs  fullwidth.rs  go.rs  halfwidth.rs  html.rs  ignorer.rs  java.rs  javascript.rs  json.rs  keyword.rs  kotlin.rs  lib.rs  markdown.rs  objective_c.rs  php.rs  python.rs  result.rs  ruby.rs  rule.rs  rust.rs  scala.rs  spellcheck.rs  sql.rs  strategery.rs  strings.rs  swift.rs  types.rs  yaml.rs
autocorrect/src/cli/: cli.rs  main.rs  mod.rs  progress.rs  update.rs
autocorrect/src/code/: asciidoc.rs  c.rs  code.rs  conf.rs  csharp.rs  css.rs  dart.rs  elixir.rs  gettext.rs  go.rs  html.rs  java.rs  javascript.rs  json.rs  jupyter.rs  kotlin.rs  latex.rs  lua.rs  markdown.rs  mod.rs  objective_c.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  sql.rs  strings.rs  swift.rs  types.rs  xml.rs  yaml.rs  zig.rs
autocorrect/src/config/: config.rs  mod.rs  severity.rs  spellcheck.rs  toggle.pest  toggle.rs
autocorrect/src/result/: json.rs  mod.rs  rdjson.rs
autocorrect/src/rule/: fullwidth.rs  halfwidth.rs  mod.rs  rule.rs  spellcheck.rs  strategery.rs  text.pest  text.rs  word.rs
autocorrect/src/serde_any/: de.rs  error.rs  mod.rs
autocorrect/tests/: .autocorrectrc.test  format.rs
autocorrect/tests/fixtures/: example.html  example.json  example.md  example.yml  jupyter.expected.json  jupyter.expected.txt  jupyter.ipynb  jupyter.sm.ipynb  large.json
example/: examples.js  index.html  index.js  index.ts  package.json  tsconfig.json  vite.config.ts  webpack.config.js
src/: bench.rs  code.rs  csharp.rs  css.rs  dart.rs  fullwidth.rs  go.rs  halfwidth.rs  html.rs  java.rs  javascript.rs  json.rs  kotlin.rs  lib.rs  logger.rs  main.rs  markdown.rs  objective_c.rs  php.rs  python.rs  ruby.rs  rust.rs  sql.rs  strategery.rs  strings.rs  swift.rs  yaml.rs
src/lib/: Cargo.toml  release.toml
src/lib/grammar/: csharp.pest  elixir.pest  go.pest  html.pest  json.pest  markdown.pest  objective_c.pest  rust.pest  scala.pest
src/lib/src/: code.rs  csharp.rs  dart.rs  go.rs  html.rs  ignorer.rs  javascript.rs  json.rs  lib.rs  markdown.rs  php.rs  rust.rs  sql.rs  strategery.rs  strings.rs  test_random.rs  types.rs
tests/: bench.sh  node.test.js  test_init_config.sh  test_lint_json.sh
(+99 files in other folders)
