[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
description = "A linter and formatter for help you improve copywriting, to correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean)."
edition = "2018"
homepage = "https://github.com/huacnlee/autocorrect"
license = "MIT"
name = "autocorrect-cli"
readme = "../README.md"
repository = "https://github.com/huacnlee/autocorrect"
version = "2.4.3"

[[bin]]
name = "autocorrect"
path = "src/main.rs"

[dependencies]
autocorrect = {path = "../autocorrect", version = ">1.0.0"}
clap = {version = "3", features = ['derive']}
colored = "2"
ignore = "0.4"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
threadpool = "1.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
walkdir = "2.3.2"

# Config template from remote
# Request features:
# - blocking - for blocking request
# - rustls-tls - for use native rustls without system openssl dependency
reqwest = {version = "0.11.10", features = ["blocking", "rustls-tls"], default-features = false}

# Self Update
# - archive-tar + compression-flate2 - for tar.gz
# - rustls - for use native rustls without system openssl dependency
self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false}
sudo = "0.5"

[profile.release]
lto = true 
opt-level = "z" # Optimize for size.
strip = true # Automatically strip symbols from the binary.
