[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
description = "A linter and formatter for help you improve copywriting, to correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean)."
edition = "2018"
homepage = "https://github.com/huacnlee/autocorrect"
license = "MIT"
name = "autocorrect-cli"
readme = "../README.md"
repository = "https://github.com/huacnlee/autocorrect"
version = "2.16.1"

[[bin]]
name = "autocorrect"
path = "src/main.rs"

[dependencies]
autocorrect.workspace = true
autocorrect-lsp.workspace = true

clap = { version = "4", features = ['derive'] }
ignore = "0.4"
log = "0.4"
num_cpus = "1.13.0"
owo-colors = "4.2.0"
threadpool = "1.8.1"

# Config template from remote
# Request features:
# - blocking - for blocking request
# - rustls-tls - for use native rustls without system openssl dependency
reqwest = { version = "0.11.18", features = [
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = [
    "macros",
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
], default-features = false }

# Self Update
# - archive-tar + compression-flate2 - for tar.gz
# - rustls - for use native rustls without system openssl dependency
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "compression-flate2",
    "rustls",
], default-features = false, optional = true }
sudo = { version = "0.5", optional = true }

[features]
default = ["update"]
update = ["self_update", "sudo"]

[profile.release]
lto = true
opt-level = "z" # Optimize for size.
strip = true    # Automatically strip symbols from the binary.
