[package]
description = "proc-marcro-derive for autocorrect."
edition = "2021"
homepage = "https://github.com/huacnlee/autocorrect"
keywords = ["autocorrect", "lint", "format"]
license = "MIT"
name = "autocorrect-derive"
readme = "../README.md"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "1.0.80"
