[package]
name = "autocorrect-lsp"
version = "2.9.4"
edition = "2021"

[dependencies]
autocorrect.workspace = true

tokio = { version = "1.37.0", features = [
    "io-util",
    "io-std",
    "macros",
    "rt-multi-thread",
] }
tower-lsp = "0.20.0"
typos-cli = "1.37.1"
typos = "0.10.36"
ropey = "1.6.1"
serde_json = "1.0.145"
notify = "7.0.0"
smol = "1"
anyhow = "1"
