[package]
description = "A linter and formatter for help you improve copywriting, to correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean)."
edition = "2018"
homepage = "https://github.com/huacnlee/autocorrect"
license = "MIT"
name = "autocorrect-py"
readme = "README.md"
repository = "https://github.com/huacnlee/autocorrect"
version = "2.5.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "autocorrect_py"

[dependencies]
autocorrect = {path = "../autocorrect", version = ">1.0.0"}
pyo3 = {version = "0.17.2", features = ["extension-module", "abi3-py37"]}
