[package]
edition = "2021"
name = "autocorrect-wasm"
version = "2.13.2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
autocorrect = { path = "../autocorrect", version = "^2.0" }
serde_json = "1.0.66"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
