[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
description = "A linter and formatter for help you improve copywriting, to correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean)."
edition = "2021"
homepage = "https://github.com/huacnlee/autocorrect"
keywords = ["autocorrect", "lint", "format"]
license = "MIT"
name = "autocorrect"
readme = "../README.md"
repository = "https://github.com/huacnlee/autocorrect"
version = "1.11.0"

[lib]
name = "autocorrect"
path = "src/lib.rs"

[[bin]]
name = "autocorrect"
path = "src/cli/main.rs"
required-features = ["bin"]

[dependencies]
autocorrect-derive = {path = "../autocorrect-derive", version = ">=0.1.0"}
difference = "2.0"
ignore = "0.4"
lazy_static = "1.4.0"
pest = "2.3.1"
pest_derive = "2.3.1"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.83"
serde_yaml = "0.9.9"

# =======================
# [bin.dependencies]
clap = {version = "3", features = ['derive'], optional = true}
colored = {version = "2", optional = true}
log = {version = "0.4", optional = true}
num_cpus = {version = "1.13.0", optional = true}
threadpool = {version = "1.8.1", optional = true}
walkdir = {version = "2.3.2", optional = true}

# Config template from remote
# Request features:
# - blocking - for blocking request
# - rustls-tls - for use native rustls without system openssl dependency
reqwest = {version = "0.11.10", features = ["blocking", "rustls-tls"], default-features = false, optional = true}

# Self Update
# - archive-tar + compression-flate2 - for tar.gz
# - rustls - for use native rustls without system openssl dependency
self_update = {version = "0.30.0", features = ["archive-tar", "compression-flate2", "rustls"], default-features = false, optional = true}
sudo = {version = "0.5", optional = true}

[dev-dependencies]
bencher = "0.1.5"
pretty_assertions = "1.0.0"

[build-dependencies]
regex = "1"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
# Optimize for size.
opt-level = "z"
# Automatically strip symbols from the binary.
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
bench = []
bin = ["clap", "colored", "log", "num_cpus", "reqwest", "self_update", "sudo", "threadpool", "walkdir"]

[[bench]]
harness = false
name = "example"
