[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
description = "A linter and formatter for help you improve copywriting, to correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean)."
edition = "2021"
homepage = "https://github.com/huacnlee/autocorrect"
keywords = ["autocorrect", "lint", "format"]
license = "MIT"
name = "autocorrect"
readme = "../README.md"
repository = "https://github.com/huacnlee/autocorrect"
version = "2.5.5"

[lib]
name = "autocorrect"
path = "src/lib.rs"

[dependencies]
autocorrect-derive = {path = "../autocorrect-derive", version = ">=0.2.0"}
diff = "0.1.13"
ignore = "0.4"
lazy_static = "1.4.0"
owo-colors = "3"
pest = "2.4.0"
pest_derive = "2.4.0"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.83"
serde_repr = "0.1"
serde_yaml = "0.9.9"

[dev-dependencies]
bencher = "0.1.5"
indoc = "1.0"
pretty_assertions = "1.0.0"

[build-dependencies]
regex = "1"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
bench = []

[[bench]]
harness = false
name = "example"
