[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
description = "A linter and formatter for help you improve copywriting, to correct spaces, words, punctuations between CJK (Chinese, Japanese, Korean)."
edition = "2021"
homepage = "https://github.com/huacnlee/autocorrect"
keywords = ["autocorrect", "lint", "format"]
license = "MIT"
name = "autocorrect"
readme = "../README.md"
repository = "https://github.com/huacnlee/autocorrect"
version = "2.10.0"

[lib]
name = "autocorrect"
path = "src/lib.rs"

[dependencies]
autocorrect-derive = { version = "0.3.0", path = "../autocorrect-derive" }
diff = "0.1.13"
ignore = "0.4"
lazy_static = "1.4.0"
owo-colors = "3"
pest = "2.6.1"
pest_derive = "2.6.1"
regex = "1"
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"
serde_yaml = "0.9.9"

[dev-dependencies]
criterion = "0.5"
indoc = "1.0"
pretty_assertions = "1.0.0"

[build-dependencies]
regex = "1"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
bench = []

[[bench]]
harness = false
name = "example"
