[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
description = "A linter and formatter for help you improve copywriting, to correct spaces, punctuations between CJK (Chinese, Japanese, Korean)."
edition = "2018"
homepage = "https://github.com/huacnlee/autocorrect"
keywords = ["auto-correct", "fmt", "format", "spacing"]
license = "MIT"
name = "autocorrect"
readme = "../../README.md"
repository = "https://github.com/huacnlee/autocorrect"
version = "1.2.0"

[lib]
name = "autocorrect"
path = "src/lib.rs"

[dependencies]
difference = "2.0"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"

[dev-dependencies]
pretty_assertions = "0.7.2"
