[package]
authors = ["Jason Lee <huacnlee@gmail.com>"]
description = "A linter and formatter for help you improve copywriting, to correct spaces, punctuations between CJK (Chinese, Japanese, Korean)."
edition = "2018"
homepage = "https://github.com/huacnlee/autocorrect"
keywords = ["autocorrect", "lint", "format"]
license = "MIT"
name = "autocorrect"
readme = "../../README.md"
repository = "https://github.com/huacnlee/autocorrect"
version = "1.4.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "autocorrect"
path = "src/lib.rs"

[dependencies]
difference = "2.0"
getrandom = {version = "0.2.3", features = ["js"]}
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
rand = "0.8.4"
regex = "1"
serde = {version = "1.0.127", features = ["derive"]}
serde_json = "1.0.66"
wasm-bindgen = {version = "0.2.75", features = ["serde-serialize"]}
wee_alloc = "0.4.5"

[dev-dependencies]
pretty_assertions = "0.7.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
