[package]
edition = "2021"
name = "autocorrect-rb"
version = "2.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "autocorrect"

[dependencies]
autocorrect = {path = "../../../autocorrect", version = ">=1.0.0"}
magnus = "0.3"
