[package]
edition = "2024"
name = "autocorrect-rb"
version = "2.16.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "autocorrect"

[dependencies]
autocorrect = "2"
# Wait 0.9.0
magnus = { git = "https://github.com/matsadler/magnus.git", rev = "c7e33c181c44860a33e7d8cd8f39090145f061d0" }
